# FSR4_Skyrim_Refactor

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: FidelityFX-SDK.cmake  XSEPlugin.cmake
include/: PCH.h
include/ENB/: ENBSeriesAPI.h
src/: Buffer.h  DX12SwapChain.cpp  DX12SwapChain.h  FidelityFX.cpp  FidelityFX.h  Hooks.cpp  Upscaling.cpp  Upscaling.h  WrappedResource.cpp  WrappedResource.h  XSEPlugin.cpp
src_backup_20260104_GhostingFix/: DX12SwapChain.h  Hooks.cpp  Upscaling.cpp  Upscaling.h  XSEPlugin.cpp
